CIFilter version of Sepia Tone filter doesn't match software https://bugs.webkit.org/show_bug.cgi?id=75129

Reviewed by Simon Fraser.

Source/WebCore:

Changed sepia tone filter to use a CIColorMatrix filter with
values that match sw filter.

* platform/graphics/ca/mac/PlatformCALayerMac.mm:
(interp):
(PlatformCALayer::setFilters):

LayoutTests:

Updated sepia tone results for core image filters on CA layers to match changes. Updated sw results because
they had the wrong color space

* css3/filters/effect-sepia-expected.png:
* css3/filters/effect-sepia-hw-expected.png:

Canonical link: https://commits.webkit.org/92828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104652 268f45cc-cd09-0410-ab3c-d52691b4dbfc